added for configuration read

--- a/loq-server/config.ini
+++ b/loq-server/config.ini
@@ -1,5 +1,5 @@
-# You can change your log write application to local log file, s3, etc
-produce_log=local
+# You can change your log write application to folder log file, s3, etc
+produce_log=folder
 
 #aws_key=
 #aws_secret=
